--- a/miniprogram/pages/table/table.wxss
+++ b/miniprogram/pages/table/table.wxss
@@ -16,11 +16,28 @@
    border-radius: 10rpx;
    height: 80rpx;
    width: 500rpx;
-   margin-top: 40rpx;
+   margin-top: 40rpx;  
 }
 
 .button{
   background-color: rgb(168, 205, 230);
-  margin-top: 100rpx;
+  margin-top: 20rpx;
    height: 75rpx;
+}
+
+.item_text{
+  box-shadow:1rpx 1rpx 2rpx 3rpx #DDDDDD;
+  border-radius: 10rpx;
+  height: 200rpx;
+  width: 500rpx;
+  margin-top: 40rpx;
+
+}
+
+.ui_uploader_cell{
+  border: 3rpx solid #DDDDDD;
+  border-radius: 10rpx;
+
+  height: 200rpx;
+  width: 200rpx;
 }
