--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,21 +1,22 @@
 <view class="view">
-<button class="newbtn1"  style="width:90%" wx:for="{{5}}" bindtap='gototable1'>
-<view class="text" style="width:60%">
-  <view class="item">
-    <text>项目:infomation</text>
-  </view> 
-  <view class="item">
-    <text>时间:infomation</text>
-  </view> 
-  <view class="item">
-    <text>地点:infomation</text>
-  </view> 
+  <button class="new_button"  style="width:90%" wx:for="{{5}}" bindtap='gototable1'>
+    <view class="text" style="width:60%">
+      <view class="item">
+        <text>项目:infomation</text>
+      </view> 
+      <view class="item">
+        <text>时间:infomation</text>
+      </view> 
+      <view class="item">
+        <text>地点:infomation</text>
+      </view> 
+    </view>
+    <view class="image" style="width:30%" >
+      <image class="showpic" src="/images/july.png" mode="aspectFill" ></image>
+    </view>
+  </button>
 </view>
-<view class="image" style="width:30%" >
-  <image class="showpic" src="/images/july.png" mode="aspectFill" ></image>
-</view>
-</button>
 
-<button class="newbtn" type="primary" style="width:90%" bindtap='gototable'>
-  <image class="plus" src="/images/+号.png"></image>
-</button>
+<view class="add_button"  bindtap='gototable'>
+  <image class="plus" src="/images/+号.png" style="opacity:0.8"></image>
+</view>
