--- a/miniprogram/pages/quitgame/quitgame.wxss
+++ b/miniprogram/pages/quitgame/quitgame.wxss
@@ -1,4 +1,4 @@
-/* pages/table2/table2.wxss */
+/* pages/quitgame/quitgame.wxss */
 .vtable2{  
   font-size: larger;
   position: relative;
@@ -14,5 +14,5 @@
    }
 
    .button{
-    background-color: #54c5c5;
+    background-color:#54c5c5;
    }
