--- a/miniprogram/pages/quitpro/quitpro.wxml
+++ b/miniprogram/pages/quitpro/quitpro.wxml
@@ -1,4 +1,4 @@
-<!--pages/table1/table1.wxml-->
+<!--pages/quitpro/quitpro.wxml-->
 <view class="vtable1"> 
 <view class="item">项目名：
   <text>infomation</text>
@@ -12,6 +12,5 @@
   <view class="item_text">备注：  
     <textarea>infomation</textarea>
   </view>
-
-  <button class="button" bindtap="goback">我要加入</button>
+  <button class="button" bindtap="cancel">想要退出</button>
 </view>
