--- a/miniprogram/pages/quitpro/quitpro.wxss
+++ b/miniprogram/pages/quitpro/quitpro.wxss
@@ -1,5 +1,5 @@
-/* pages/table2/table2.wxss */
-.vtable2{  
+/* pages/quitpro/quitpro.wxss */
+.vtable1{  
   font-size: larger;
   position: relative;
   direction: flex;
@@ -14,5 +14,6 @@
    }
 
    .button{
-    background-color: #54c5c5;
+      background-color: rgb(168, 205, 230);
    }
+   
