--- a/ui/teacher.ui
+++ b/ui/teacher.ui
@@ -44,7 +44,7 @@
 QTabBar::tab{width:120}</string>
    </property>
    <property name="currentIndex">
-    <number>4</number>
+    <number>0</number>
    </property>
    <property name="elideMode">
     <enum>Qt::ElideNone</enum>
@@ -61,7 +61,7 @@ QTabBar::tab{width:120}</string>
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>700</width>
+       <width>850</width>
        <height>550</height>
       </rect>
      </property>
@@ -70,6 +70,9 @@ QTabBar::tab{width:120}</string>
        <family>微软雅黑</family>
       </font>
      </property>
+     <property name="styleSheet">
+      <string notr="true">border:none</string>
+     </property>
      <property name="dragEnabled">
       <bool>false</bool>
      </property>
@@ -77,7 +80,7 @@ QTabBar::tab{width:120}</string>
       <number>0</number>
      </property>
      <property name="columnCount">
-      <number>5</number>
+      <number>4</number>
      </property>
      <column>
       <property name="text">
@@ -134,18 +137,6 @@ QTabBar::tab{width:120}</string>
        </font>
       </property>
      </column>
-     <column>
-      <property name="text">
-       <string>详情</string>
-      </property>
-      <property name="font">
-       <font>
-        <weight>75</weight>
-        <italic>true</italic>
-        <bold>true</bold>
-       </font>
-      </property>
-     </column>
     </widget>
    </widget>
    <widget class="QWidget" name="teacher_tab2">
@@ -157,7 +148,7 @@ QTabBar::tab{width:120}</string>
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>700</width>
+       <width>850</width>
        <height>550</height>
       </rect>
      </property>
@@ -165,6 +156,9 @@ QTabBar::tab{width:120}</string>
       <font>
        <family>微软雅黑</family>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border:none</string>
      </property>
      <property name="dragEnabled">
       <bool>false</bool>
@@ -260,7 +254,7 @@ QTabBar::tab{width:120}</string>
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>700</width>
+       <width>850</width>
        <height>550</height>
       </rect>
      </property>
@@ -268,6 +262,9 @@ QTabBar::tab{width:120}</string>
       <font>
        <family>微软雅黑</family>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border:none</string>
      </property>
      <property name="dragEnabled">
       <bool>false</bool>
@@ -353,7 +350,7 @@ QTabBar::tab{width:120}</string>
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>700</width>
+       <width>850</width>
        <height>550</height>
       </rect>
      </property>
@@ -361,6 +358,9 @@ QTabBar::tab{width:120}</string>
       <font>
        <family>微软雅黑</family>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border:none;</string>
      </property>
      <property name="dragEnabled">
       <bool>false</bool>
