--- a/ui/labinfo_window.ui
+++ b/ui/labinfo_window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>lab_add_window</class>
- <widget class="QWidget" name="lab_add_window">
+ <class>lab_info_window</class>
+ <widget class="QWidget" name="lab_info_window">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -49,7 +49,7 @@
     <rect>
      <x>170</x>
      <y>180</y>
-     <width>331</width>
+     <width>341</width>
      <height>51</height>
     </rect>
    </property>
@@ -73,7 +73,7 @@
   <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>160</x>
      <y>320</y>
      <width>411</width>
      <height>161</height>
